syntax = "proto3";

package tasks;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/tasks/acceptance_tests/recipe/tasks/protos";

////////////////////////////////////////////////////////////////////////////////

message ChainTaskRequest {
    uint32 Depth = 1;
}

message ChainTaskState {
    ChainTaskRequest Request = 1;
    // Imitates some user defined state.
    uint32 Counter = 2;
}
